--- a/app/modules/registerinvestor/views/registerInvestorStarted.html
+++ b/app/modules/registerinvestor/views/registerInvestorStarted.html
@@ -60,7 +60,7 @@
                                     </div>
                                 </div>
                                 <p><span class="content">Phone Status</span><span ng-if="phoneVerified" class="nextline highlight placeholder addOnlyBold">VERIFIED</span>
-                                <span ng-if="false" ng-if="!phoneVerified" class="nextline not-verified placeholder addOnlyBold">VERIFY NOW</span></p>
+                                <span ng-if="!phoneVerified" class="nextline not-verified placeholder addOnlyBold">VERIFY NOW</span></p>
                             </div>
                         </div>
                     </div>
