Fix Investor Registration dropdown selection and other issues

--- a/app/modules/registerinvestor/views/registerInvestorConfirmation.html
+++ b/app/modules/registerinvestor/views/registerInvestorConfirmation.html
@@ -1,7 +1,7 @@
-<section class="fadeIn quickInvest registerInvestor">
+<section class="fadeIn registerInvestor swiper-outer-cover">
 <div class="fadeIn swiper-container registerInvestorConfirm customSwiper investorInfo type2Sliders" ng-init="step = 1">
     <div class="swiper-wrapper">
-        <div class="swiper-slide content-main-header">
+        <div class="content-main-header">
             <form name="invertorInfoForm1" novalidate>
                 <div class="swiper-content no-padding">
                   <div class="col-xs-12">
