--- a/app/modules/registerinvestor/views/registerInvestorReview.html
+++ b/app/modules/registerinvestor/views/registerInvestorReview.html
@@ -1,4 +1,4 @@
-<section class="fadeIn quickInvest registerInvestor">
+<section class="fadeIn quickInvest registerInvestor" ng-init="callVideoGet()">
     <form name="quickInvestForm1" novalidate>
         <div class="content-main-header">
             <div class="slider-entry-image">
