--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2484,9 +2484,9 @@
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content noPadding">
                      <p class="question">I was born in the city of <span class="swiper-input"><input ng-model="modelVal.placeOfBirth" type="text" name="year" required></span></p>
-                     <p class="question">In the country: <select ng-if="countryList" dropdown scroll-height="250" ng-model="modelVal.countryOfBirth"><option ng-selected="$index == 0" ng-repeat="country in countryList" value="{{country.value}}">{{country.value}}</option></select></p>
-                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option ng-selected="modelVal.occupationType=='PRI'||!modelVal.occupationType||modelVal.occupationType=='undefined'||modelVal.occupationType==''" value="PRI">Private Sector Service</option><option ng-selected="(modelVal.occupationType=='PRO')" value="PRO">Professional (Self-Employed)</option><option  ng-selected="(modelVal.occupationType=='BUS')" value="BUS">Business</option><option  ng-selected="(modelVal.occupationType=='HOU')" value="HOU">Housewife</option><option ng-selected="(modelVal.occupationType=='PUB')" value="PUB">Public Sector Service</option><option ng-selected="(modelVal.occupationType=='GOV')" value="GOV">Government Service</option><option ng-selected="(modelVal.occupationType=='FOR')" value="FOR">Forex Dealer</option><option ng-selected="(modelVal.occupationType=='AGR')" value="AGR">Agriculturist</option><option ng-selected="(modelVal.occupationType=='STU')" value="STU">Student</option><option ng-selected="(modelVal.occupationType=='OTH')" value="OTH">Other (please specify)</option></select></p>
-                      <p class="question">And I make <select dropdown ng-model="modelVal.income" scroll-height="120"><option ng-selected="modelVal.income=='1'||!modelVal.income||modelVal.income=='undefined'||modelVal.income==''" selected value="1">&lt; 1 Lakhs</option><option ng-selected="(modelVal.income=='2')" value="2">1-5 Lakhs</option><option ng-selected="(modelVal.income=='3')" value="3">5-10 Lakhs</option><option ng-selected="(modelVal.income=='4')" value="4">10-25 Lakhs</option><option ng-selected="(modelVal.income=='5')" value="5">25-100 Lakhs</option><option ng-selected="(modelVal.income=='6')" value="6">&gt; 100 Lakhs</option></select>per year</p>
+                      <p class="question">I worked as a <select id="occupation" dropdown ng-model="modelVal.occupationType"><option value="PRI">Private Sector Service</option><option value="PRO">Professional (Self-Employed)</option><option value="BUS">Business</option><option value="HOU">Housewife</option><option value="PUB">Public Sector Service</option><option value="GOV">Government Service</option><option value="FOR">Forex Dealer</option><option value="AGR">Agriculturist</option><option value="STU">Student</option><option value="OTH">Other (please specify)</option></select></p>
+                     <p class="question">In the country: <select id="country-list" ng-if="countryList" dropdown scroll-height="250" ng-model="modelVal.countryOfBirth"><option ng-selected="$index == 0" ng-repeat="country in countryList" value="{{country.value}}">{{country.value}}</option></select></p>
+                      <p class="question">And I make <select id="income-cat" dropdown ng-model="modelVal.income" scroll-height="120"><option ng-selected="modelVal.income=='1'||!modelVal.income||modelVal.income=='undefined'||modelVal.income==''" value="1">&lt; 1 Lakhs</option><option ng-selected="(modelVal.income=='2')" value="2">1-5 Lakhs</option><option ng-selected="(modelVal.income=='3')" value="3">5-10 Lakhs</option><option ng-selected="(modelVal.income=='4')" value="4">10-25 Lakhs</option><option ng-selected="(modelVal.income=='5')" value="5">25-100 Lakhs</option><option ng-selected="(modelVal.income=='6')" value="6">&gt; 100 Lakhs</option></select>per year</p>
                 </div>
             </form>
         </div>
@@ -2619,7 +2619,7 @@
                 <div class="swiper-content">
 					  <span class="error-text col-xs-12">Communication Address</span>
 					  <p class="question col-xs-12">I am providing my<select dropdown ng-model="modelVal.communicationAddressType"><option ng-selected="(modelVal.communicationAddressType==1)||(!modelVal.communicationAddressType)" value="1">Residential</option><option ng-selected="(modelVal.communicationAddressType==2)" value="2">Business</option><option ng-selected="(modelVal.communicationAddressType==3)" value="3">Residential or Business</option><option ng-selected="(modelVal.communicationAddressType==4)" value="4">Registered Office</option></select>address</p>
-                      <p class="question col-xs-12">My PIN code is <span class="swiper-input"><input ng-model="modelVal.communicationAddress.pincode" type="text" name="pincode" validate-pincode ng-change="quickInvestForm3.pincode.$error.invalidPincode?0:lookupPincode(modelVal.communicationAddress)" required></span></p>
+                      <p class="question col-xs-12">My PIN code is <span class="swiper-input"><input validate-pincode ng-model="modelVal.communicationAddress.pincode" type="text" name="pincode" ng-change="quickInvestForm3.pincode.$error.invalidPincode?0:lookupPincode(modelVal.communicationAddress)" required></span></p>
                       <p class="question col-xs-12">and my address is<span class="swiper-input"><input ng-model="modelVal.communicationAddress.addressLine1" type="text" name="year" required></span></p>
                       <p class="question col-xs-12"><span class="swiper-input"><input ng-model="modelVal.communicationAddress.addressLine2" type="text" name="year" required></span></p>
                       <p class="col-xs-12">
@@ -2632,7 +2632,7 @@
             </form>
         </div>
         <div class="swiper-slide" ng-if="$root.selectedCriteria =='op2'||$root.selectedCriteria=='op3'">
-            <form name="quickInvestForm3" novalidate>
+            <form name="quickInvestForm4" novalidate>
                 <div class="swiper-content noPadding">
 					<p class="question col-xs-12">My address proof is my<select dropdown ng-model="modelVal.addressProofType"><option ng-selected="(modelVal.addressProofType==1)||(!modelVal.addressProofType)" value="1">Passport</option><option ng-selected="(modelVal.addressProofType==2)" value="2">Driving License</option><option ng-selected="(modelVal.addressProofType==3)" value="3">Voter ID Card</option><option ng-selected="(modelVal.addressProofType==4)" value="4">Aadhaar Card</option><option ng-selected="(modelVal.addressProofType==5)" value="5">Bank Statement</option><option ng-selected="(modelVal.addressProofType==6)" value="6">Utility Bill (from last 3 months)</option><option ng-selected="(modelVal.addressProofType==7)" value="7">Ration Card</option><option ng-selected="(modelVal.addressProofType==8)" value="8">Regd Lease / Sale Agreement</option></select></p>
 					<input id='upload' accept=".jpg, .png, .jpeg" style="display:none" autoplay onchange="angular.element(this).scope().imageUpload(this, 'frontImageUrl')" type='file'/>
@@ -2661,13 +2661,13 @@
             </form>
         </div>
         <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
+            <form name="quickInvestForm5" novalidate>
                 <div class="swiper-content noPadding hasCheckbox">
                     <div class="checkbox-cover">
                         <input type="checkbox" required id="option1Type2" name="option2" ng-model="modelVal.addressAreEqual" value="true"><label for="option1Type2"><span></span>My permanent address is same as the address given before.</label>
                     </div>
                     <div ng-show="!modelVal.addressAreEqual">
-                      <p class="question col-xs-12">My PIN code is <span class="swiper-input"><input ng-model="modelVal.permanentAddress.pincode" validate-pincode type="text" name="permPincode" ng-change="quickInvestForm3.permPincode.$error.invalidPincode?0:lookupPincode(modelVal.permanentAddress)" required></span></p>
+                      <p class="question col-xs-12">My PIN code is <span class="swiper-input"><input ng-model="modelVal.permanentAddress.pincode" validate-pincode type="text" name="permPincode" ng-change="quickInvestForm5.permPincode.$error.invalidPincode?0:lookupPincode(modelVal.permanentAddress)" required></span></p>
                       <p class="question col-xs-12">and my address is <span class="swiper-input"><input ng-model="modelVal.permanentAddress.addressLine1" type="text" name="year" required></span></p>
                       <p class="question col-xs-12"><span class="swiper-input"><input ng-model="modelVal.permanentAddress.addressLine2" type="text" name="year" required></span></p>
                       <p class="question col-xs-12">It is located in the city of <span ng-bind="modelVal.permanentAddress.city"></span></p>
@@ -2679,7 +2679,7 @@
             </form>
         </div>
         <div class="swiper-slide" ng-if="$root.selectedCriteria == 'op3'">
-            <form name="quickInvestForm3" novalidate>
+            <form name="quickInvestForm6" novalidate>
                 <div class="swiper-content noPadding">
 					<p class="question col-xs-12">My permanent address proof is my<select dropdown ng-model="modelVal.permanentAddressProofType"><option selected value="1">Passport</option><option value="2">Driving License</option><option value="3">Voter ID Card</option><option value="4">Aadhaar Card</option><option value="5">Bank Statement</option><option value="6">Utility Bill (from last 3 months)</option><option value="7">Ration Card</option><option value="8">Regd Lease / Sale Agreement</option></select> address</p>        
                     <div class="col-xs-12 contactInfoUpload">            
@@ -2708,7 +2708,7 @@
             </form>
         </div>
         <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
+            <form name="quickInvestForm7" novalidate>
                 <div class="swiper-content noPadding hasCheckbox">
                     <p class="question col-xs-12">My mobile number is <span class="swiper-input"><input ng-model="modelVal.phoneNumber" type="text" name="year" required></span></p>
                     <p class="question col-xs-12">and my email address is <span class="swiper-input"><input ng-model="modelVal.email" type="text" name="year" required></span></p>
@@ -2738,7 +2738,7 @@
                       </div>
                       <div ng-show="!modelVal.nomineeAbsent" class="col-xs-12">
                       <p class="question">My nominee name is <span class="swiper-input"><input ng-model="modelVal.nomineeName" type="text" name="year" required></span></p>
-                      <p class="question">and my relationship with them is <select dropdown ng-model="modelVal.relationshipWithInvestor"><option ng-selected="(modelVal.relationshipWithInvestor==1)||(modelVal.relationshipWithInvestor == undefined)" value="1">Spouse</option><option ng-selected="(modelVal.relationshipWithInvestor==2)" value="2">Parent</option><option ng-selected="(modelVal.relationshipWithInvestor==3)" value="3">Offspring</option><option ng-selected="(modelVal.relationshipWithInvestor==4)" value="4">Sibling</option><option ng-selected="(modelVal.relationshipWithInvestor==5)" value="5">Other</option></select></p>
+                      <p class="question">and my relationship with them is <select dropdown ng-model="modelVal.relationshipWithInvestor"><option ng-selected="(modelVal.relationshipWithInvestor==1)||(modelVal.relationshipWithInvestor == undefined)||modelVal.relationshipWithInvestor == ''" value="1">Spouse</option><option ng-selected="(modelVal.relationshipWithInvestor==2)" value="2">Parent</option><option ng-selected="(modelVal.relationshipWithInvestor==3)" value="3">Offspring</option><option ng-selected="(modelVal.relationshipWithInvestor==4)" value="4">Sibling</option><option ng-selected="(modelVal.relationshipWithInvestor==5)" value="5">Other</option></select></p>
                       <p class="question">and they were born on <span class="swiper-input"><input type="text" class="datepicker" placeholder="DD/MM/YYYY" data-datepicker="{theme: 'flat',dateformat: 'YYYY-MM-DD'}" data-ng-model="modelVal.nomineeDob" ng-init="modelVal.nomineeDob = '1991-01-01'"></span></p>
                       <p class="question" ng-show="showGuardian()">My nominee's guardian is <span class="swiper-input"><input ng-model="modelVal.guardianName" type="text" name="year" required></span></p>
                       </div>
@@ -2772,7 +2772,7 @@
         <button ng-show="(step == 1 && $root.selectedCriteria=='op1')" click-redirect="{{$root.redirectUrlContext}}" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
         <button ng-show="(step == 1 && $root.selectedCriteria=='op1')" ng-click="appendValues(modelVal);(step = step + 1);processNomineeAbsent()" ng-disabled="(!modelVal.nomineeAbsent)&&(!modelVal.nomineeName||!modelVal.nomineeDob||(showGuardian()&&!modelVal.guardianName))" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 1 && $root.selectedCriteria=='op2')" click-redirect="{{$root.redirectUrlContext}}"  class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1 && $root.selectedCriteria=='op2')" ng-click="appendValues(modelVal);saveInfo();(step = step + 1)" click-redirect="{{$root.redirectUrlContext}}" ng-disabled="(!modelVal.addressAreEqual)&&(!modelVal.nomineeAddress.pincode||!modelVal.nomineeAddress.addressLine1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1 && $root.selectedCriteria=='op2')" ng-click="appendValues(modelVal);saveInfo(true);(step = step + 1)" ng-disabled="(!modelVal.addressAreEqual)&&(!modelVal.nomineeAddress.pincode||!modelVal.nomineeAddress.addressLine1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
 </div>
 <div ng-if="swiperName == 'earnInterest'" class="fadeIn swiper-container customSwiper earnInterest type2Sliders" ng-init="step = 1">
@@ -2889,7 +2889,7 @@
         <p>Video Selfie</p>
     </div>    
     <div class="fin-btn-group gotoPages">
-        <button class="fin-link-btn content-prev" ng-show="(step == 1)" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>DO IT LATER</button>
+        <button class="fin-link-btn content-prev" ng-show="(step == 1)" ng-click="(step != 1) && (step = step - 1)" click-redirect="/registerInvestorReview"><span><img src="assets/images/startedArrow.png"></span>DO IT LATER</button>
         <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1);saveInfo()" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 2)" ng-click="appendValues(modelVal)" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE TO DASHBOARD</button>
     </div>
